# lucimalir

./: CMakeLists.txt  README.md
examples/: ex1_default.lua  ex2_params_and_multiple_images.lua  ex3_generalized_4d.lua  ex4_precision.lua
src/: CMakeLists.txt
src/core/: CMakeLists.txt  Core.cpp  Core.h  GlobalConfig.cpp  GlobalConfig.h  Logger.cpp  Logger.h
src/core/pipeline/: Buffer.cpp  Buffer.h  BufferCollection.cpp  BufferCollection.h  Filter.cpp  Filter.h  FilterJob.cpp  FilterJob.h  FilterWrapper.cpp  FilterWrapper.h  Parameter.cpp  Parameter.h
src/core/pipeline/filters/: ImageExternalOutput.cpp  ImageExternalOutput.h  ImageMerge.cpp  ImageMerge.h  IntegerDataRenderer.cpp  IntegerDataRenderer.h  MandelbrotJulia.cpp  MandelbrotJulia.h  NonContextualFilter.h  NonContextualFilterJob.h  NonContextualMergeFilter.h  NonContextualMergeFilterJob.h  ViewInput.cpp  ViewInput.h
src/core/pipeline/parameters/: ArrayParameter.cpp  ArrayParameter.h  ConstantParameter.cpp  ConstantParameter.h  RangeParameter.cpp  RangeParameter.h  RangeParameterExponential.cpp  RangeParameterExponential.h
src/core/util/: Colors.cpp  Colors.h  ConcatConstChar.h  DataTypes.cpp  DataTypes.h  LocalMutexWrapper.cpp  LocalMutexWrapper.h  OptionalError.cpp  OptionalError.h  PartitionedProcessingTracker.cpp  PartitionedProcessingTracker.h  PngOutput.cpp  PngOutput.h  RenderingView.cpp  RenderingView.h  SharedMutexWrapper.cpp  SharedMutexWrapper.h  ThreadBlocker.cpp  ThreadBlocker.h
src/core/wrappers/: SharedPtrFilter.h  SharedPtrParameter.h  WeakPtrFilter.h  WeakPtrFilterWrapper.h
src/guiapp/: CMakeLists.txt  main.cpp
src/luaapi/: CMakeLists.txt  HelpStrings.cpp  HelpStrings.h  LuaStateWrapper.cpp
src/luaapi/proxies/: BufferCollectionProxy.cpp  BufferCollectionProxy.h  FilterParamsProxy.cpp  FilterParamsProxy.h  FilterProxy.cpp  FilterProxy.h  ParameterProxy.cpp  ParameterProxy.h
src/noguiapp/: CMakeLists.txt  LuaStateWrapper.cpp  LuaStateWrapper.h  main.cpp
